esports-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres
          ports:
          - containerPort: 5432
        - name: pgadmin
          image: dpage/pgadmin4
          ports:
            - containerPort: 80
        - name: esports
          image: patricknoir/esports:1.0
          ports:
          - containerPort: 9080
#          env:
#            - name: DATABASE_URL
#              value: "postgres://postgres:postgres@postgres:5432/esports"

---

apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  selector:
    app: postgres
  type: NodePort
  ports:
    - port: 5432
      targetPort: 5432
      nodePort: 30001

---

apiVersion: v1
kind: Service
metadata:
  name: pgadmin-service
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5050
      targetPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: esports-account-service
spec:
  selector: postgres # this needs to be changed with a different deployment


#---
#
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: esports-ingress
#spec:
#  defaultBackend:
#    service:
#      name: postgres-service
#      port:
#        number: 5050

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: esports-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pgadmin-service
                port:
                  number: 5050
